--- a/adeluxuryeyewear/about/templates/about/base_layout.html
+++ b/adeluxuryeyewear/about/templates/about/base_layout.html
@@ -7,6 +7,7 @@
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
         <link rel="stylesheet" href="{% static 'css/ade_about.css' %}">
         <style>
@@ -37,7 +38,7 @@
             <a class="item"> Refund Policy </a>
             <a class="item"> Privacy Statement </a>
         </div>
-        <div class="ui inverted icon top fixed menu" style="background-color: #000">
+        <div id="header" class="ui inverted icon top fixed menu">
             <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu </a>
             <h1 class="center-text white">ADE LUXURY WEAR</h1>
         </div>
