added more structure/style (still working)

--- a/adeluxuryeyewear/about/templates/about/about_ade.html
+++ b/adeluxuryeyewear/about/templates/about/about_ade.html
@@ -6,7 +6,6 @@ About us | ADE
 {% endblock %}
 
 {% block content %}
-
 <div class="pusher">
 <div class="ui container">
     <div class="ui column centered stackable grid">
@@ -33,7 +32,7 @@ About us | ADE
         </div>
         <div class="row">
             <div class="column">
-                <div class="ui huge header">Dr. Adesola Fadeyi</div>
+                <div class="ui huge header">Meet Dr. Adesola “Sola” Fadeyi, O.D.</div>
             </div>
         </div>
     </div>
@@ -55,8 +54,7 @@ About us | ADE
 {% endblock %}
 
 {% block footer %}
-<div id="footer" class="ui">
-    <div class="ui stackable grid">
+    <div id="footer" class="ui stackable grid">
         <div class="row center aligned">
             <div class="column">
                 <div class="ui large header">Let's stay connected!</div>
@@ -67,28 +65,33 @@ About us | ADE
             </div>
         </div>
         <div class="row centered">
-            <div class="newsletter-form ui form">
+            <div class="ui form newsletter-form">
                 <div class="field">
-                    <label>Subscribe to our newsletter</label>
-                    <input type="text" placeholder="Email">
+                    <label>Subscribe to our newsletter!</label>
+                    <input type="text" placeholder="Email address">
+                </div>
+                <div class="field">
+                    <button class="ui right labeled icon button">
+                    <i class="right arrow icon"></i>
+                    Subscribe
+                    </button>
                 </div>
             </div>
         </div>
-        <div class="six column centered row center aligned">
-            <div class="wide column center aligned">
+        <div id="boring" class="six column centered row center aligned">
+            <div class="column center aligned">
                 <a href="#">Refund Policy</a><br>          
             </div>
-            <div class="wide column center aligned">
+            <div class="column center aligned">
                 <a href="#">Terms and conditions</a><br>
             </div>
-            <div class="wide column center aligned">
+            <div class="column center aligned">
                 <a href="#">Privacy statement</a>
         </div>
-        <div class="row center aligned">
+        <div class="row right aligned">
             <div class="column">
                 ADE Luxury Eyewear @ 2018
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
