--- a/adeluxuryeyewear/about/templates/about/base_layout.html
+++ b/adeluxuryeyewear/about/templates/about/base_layout.html
@@ -27,7 +27,7 @@
         
         <!-- Navigation -->
         <div class="ui sidebar vertical left inverted menu">
-            <a class="item"> Home </a>
+            <a href="{% url 'index' %}" class="item"> Home </a>
             <a class="item"> All Collections </a>
             <a class="item"> Shop Men </a>
             <a class="item"> Shop Woman </a>
