--- a/adeluxuryeyewear/about/static/css/ade_about.css
+++ b/adeluxuryeyewear/about/static/css/ade_about.css
@@ -2,7 +2,7 @@ a{
     color: white;
 }
 a:hover{
-    color: greenyellow;
+    color: rgb(95, 215, 75);
     text-decoration: underline;
 }
 
@@ -10,13 +10,14 @@ a:hover{
 .container{
     padding: 5em 0 5em 0;
 }
-#header, #footer{
-    background-color: #211d23;
+#header{
+    background-color: #232323;
 }
 
 /* Footer */
 
 #footer{
+    background-color: rgb(95, 215, 75);
     color: white;
     padding-top: 2.5em;
     padding-bottom: .5em;
@@ -26,7 +27,10 @@ a:hover{
 }
 #footer .sm-icon:hover{
     cursor: pointer;
-    color: greenyellow;
+    color: rgb(110, 140, 70);
+}
+#footer > #boring{
+    background-color: #232323;
 }
 /*--- Mobile only ---*/
 
