--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             
-            <a class="item"> About </a>
+            <a href="{% url 'about' %}" class="item"> About </a>
             <a class="item"> Contact </a>
             <a class="item"> Terms & Conditions </a>
             <a class="item"> Refund Policy </a>
