messing with layout, added products page, currently working on it

--- a/adeluxuryeyewear/about/templates/about/base_layout.html
+++ b/adeluxuryeyewear/about/templates/about/base_layout.html
@@ -30,7 +30,7 @@
             <a href="{% url 'index' %}" class="item"> Home </a>
             <a class="item"> All Collections </a>
             <a class="item"> Shop Men </a>
-            <a class="item"> Shop Woman </a>
+            <a class="item"> Shop Women </a>
             <a class="item"> Shop Unisex </a>
             <a class="item"> About </a>
             <a class="item"> Contact </a>
