--- a/adeluxuryeyewear/ade/templates/ade/index.html
+++ b/adeluxuryeyewear/ade/templates/ade/index.html
@@ -11,7 +11,7 @@
         <div class="container black-bg" >
         <div class="main-carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false }'>
             <div class="carousel-cell">
-                <img src="{% static 'img/banner-pic5.png' %}" alt="product image" style="height: 700px"/>
+                <img src="{% static 'img/product_images/Luxxe _ ADE _Luxxe _ ADELuxxe _ 4B36D4FE-3E54-4B73-AB1A-3B865CBED26B.JPEG' %}" alt="product image" style="height: 700px"/>
                 
                <!-- <div class="carousel-content">
                     <h1>Experience the way it truly feels to look like royalty. </h1>
@@ -20,7 +20,7 @@
             </div>
 
             <div class="carousel-cell">
-                <img src="{% static 'img/banner-pic4.JPEG' %}" alt="banner img" style="height: 700px" />
+                <img src="{% static 'img/product_images/Luxxe _ ADE _Luxxe _ ADELuxxe _ B85680AF-D830-4D2B-9C6E-AE848CD99B79.JPEG' %}" alt="banner img" style="height: 700px" />
 
                <!-- <div class="carousel-content">
                     <button class="ui huge inverted standard button">SHOP NOW</button>                
@@ -28,7 +28,7 @@
             </div>
 
             <div class="carousel-cell">
-                <img src="{% static 'img/banner-pic3.JPEG' %}"  alt="banner img" style="height: 700px" />
+                <img src="{% static 'img/product_images/Luxxe _ ADE _Luxxe _ ADELuxxe _ A9FC860B-199D-43AB-9D61-B4BA040DD0C0.JPEG' %}"  alt="banner img" style="height: 700px" />
                 
                 <!--<div class="carousel-content">
                     <h1>SEE LIKE ROYALTY, FEEL LIKE ROYALTY</h1>
