--- a/adeluxuryeyewear/products/templates/products/products.html
+++ b/adeluxuryeyewear/products/templates/products/products.html
@@ -1,3 +1,72 @@
-<!-- We can have this be the product page.
-    We can also place all respective 'products' app
-    *.html files in this directory. -->
+{% extends 'products/base_layout.html' %}
+{% load static %}
+
+
+
+<!-- Body -->
+{% block content %}    
+
+<!-- Page Contents -->
+<div class="pusher">
+
+        <div class="ui inverted vertical masthead center aligned segment">
+
+                <div class="ui container">
+                  <div class="ui large secondary inverted menu">
+                    <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
+                   
+                  </div>
+                </div>
+            
+                <div class="ui text container">
+                  <h1 class="ui inverted header">
+                    Imagine-a-Company
+                  </h1>
+                </div>
+            
+              </div>
+ 
+    
+    <div class="ui vertical stripe segment">
+        <div class="ui middle aligned stackable grid container">
+            <div class="row">
+                <div class="eight wide column">
+                    <h3 class="ui header">We Help Companies and Companions</h3>
+                    <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="ui inverted vertical footer segment">
+        <div class="ui container">
+            <div class="ui stackable inverted divided equal height stackable grid">
+                <div class="three wide column">
+                    <h4 class="ui inverted header">About</h4>
+                    <h4 class="ui inverted header">Contact</h4>
+                    <h4 class="ui inverted header">Terms & Conditions</h4>
+                    <h4 class="ui inverted header">Refund Policy</h4>
+                    <h4 class="ui inverted header">Privacy Statement</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</div>
+{% endblock %}
+
+
+
+
+
+
+      
+      
+
+
+
+     
+
+
+
