--- a/adeluxuryeyewear/about/templates/about/base_layout.html
+++ b/adeluxuryeyewear/about/templates/about/base_layout.html
@@ -2,58 +2,62 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}{% endblock %}</title>
+        <title></title>
         <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
+        
+        <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Pacifico" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">   
         <link rel="stylesheet" href="{% static 'css/ade_about.css' %}">
-        <style>
-        .white{
-            color: #fff;
-        }
-
-        .center-text{
-            margin-left: auto;
-            margin-right: auto;
-        }
-            
-        </style>
     </head>
-    
-    <body class="index pushable">
-        
-        <!-- Navigation -->
-        <div class="ui sidebar vertical left inverted menu">
+
+    <body>             
+        <!-- Sidebar Menu -->
+        <div class="ui vertical inverted sidebar menu">
             <a href="{% url 'index' %}" class="item"> Home </a>
-            <a class="item"> All Collections </a>
-            <a class="item"> Shop Men </a>
-            <a class="item"> Shop Women </a>
-            <a class="item"> Shop Unisex </a>
-            <a class="item"> About </a>
+            <div class="item">
+                <a href="{% url 'products' %}"><div class="header">Collections</div></a>
+                <div class="menu">
+                    <a class="item"> Kings Line </a>
+                    <a class="item"> Queens Line </a>
+                    <a class="item"> Unisex Line </a>
+                </div>
+            </div>
+            
+            <a href="{% url 'about' %}" class="item"> About </a>
             <a class="item"> Contact </a>
             <a class="item"> Terms & Conditions </a>
             <a class="item"> Refund Policy </a>
             <a class="item"> Privacy Statement </a>
         </div>
-        <div id="header" class="ui inverted icon top fixed menu">
-            <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu </a>
-            <h1 class="center-text white">ADE LUXURY WEAR</h1>
-        </div>
+
+    
+
         <!-- End Navigation -->
-            
+
         {% block content %}
+        
         {% endblock %}
 
         {% block footer %}
+
         {% endblock %}
 
+
+        
+    
+        <!-- Toggles sidebar -->
         <script>
+
             $('#toggle').on('click', function(){
                 $('.ui.sidebar').sidebar('toggle');
             });
+
+            
 
         </script>
 
