--- a/adeluxuryeyewear/ade/static/css/ade.css
+++ b/adeluxuryeyewear/ade/static/css/ade.css
@@ -25,13 +25,15 @@
  .ui.menu .item::before{
      content: none;
  }
+
  .black-bg{
-     background-color: #000;
- }
+    background-color: #000 !important;
+  }
 
  .padded-img{
     padding:20px;
  }
+ 
 .white{
      color: #fff !important;
  }
@@ -103,3 +105,38 @@
  .flickity-page-dots .dot.is-selected {
     background: white;
  }
+
+ /* footer */
+.footer .header{
+    font-family: 'Lato';
+    color: #fff;
+    font-weight: 100;
+  }
+  
+   .footer a{
+    color: #fff;
+  }
+  
+  .footer .sm-icon{
+    padding: .50em;
+  }
+  .footer .sm-icon:hover{
+    cursor: pointer;
+    color: rgb(110, 140, 70);
+  }
+  
+  .footer{
+    padding-top: 2em !important;
+  }
+  
+  ::placeholder {
+    color: grey !important;
+    opacity: 1; /* Firefox */
+  }
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: grey !important;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: grey !important;
+  }
