--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -8,16 +8,19 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
         
+        <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Pacifico" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">   
         <link rel="stylesheet" href="{% static 'css/ade.css' %}">
     </head>
 
-    <body> 
-        <div class="ui sidebar vertical left inverted menu">
-            <a class="item"> Home </a>
+    <body>             
+        <!-- Sidebar Menu -->
+        <div class="ui vertical inverted sidebar menu">
+            <a href="{% url 'index' %}" class="item"> Home </a>
             <div class="item">
-                <div class="header">Collections</div>
+                <a href="{% url 'products' %}"><div class="header">Collections</div></a>
                 <div class="menu">
                     <a class="item"> Kings Line </a>
                     <a class="item"> Queens Line </a>
@@ -30,14 +33,9 @@
             <a class="item"> Terms & Conditions </a>
             <a class="item"> Refund Policy </a>
             <a class="item"> Privacy Statement </a>
-                        
         </div>
-        
-        <div class="pusher">
-            <div class="ui inverted top attached demo icon menu" style="background-color: #000">
-                <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
-                <img class="ui centered image" src="{% static 'img/ade_1.png' %}" style="width: 300px; height: 200px;">
-            </div>
+
+    
 
         <!-- End Navigation -->
 
@@ -46,13 +44,17 @@
         {% endblock %}
 
 
+
         
     
         <!-- Toggles sidebar -->
         <script>
+
             $('#toggle').on('click', function(){
                 $('.ui.sidebar').sidebar('toggle');
             });
+
+            
 
         </script>
 
