--- a/adeluxuryeyewear/products/static/css/products_style.css
+++ b/adeluxuryeyewear/products/static/css/products_style.css
@@ -1,45 +1,76 @@
-.pusher {
+/*.pusher {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-  }
+  }*/
   
-  .pusher > .footer {
+  /*.pusher > .footer {
     flex: 1;
-  }
-  
-
-.ui.vertical.stripe {
-padding: 8em 0em;
+  }*/
+.item-detail h1{
+  font-family: 'Raleway';
+  font-weight: 100;
 }
-.ui.vertical.stripe h3 {
-font-size: 2em;
-}
-.ui.vertical.stripe .button + h3,
-.ui.vertical.stripe p + h3 {
-margin-top: 3em;
-}
-.ui.vertical.stripe .floated.image {
-clear: both;
-}
-.ui.vertical.stripe p {
-font-size: 1.33em;
-}
-.ui.vertical.stripe .horizontal.divider {
-margin: 3em 0em;
+.ui.selection.dropdown{
+  padding: 0px !important;
 }
 
-.quote.stripe.segment {
-padding: 0em;
-}
-.quote.stripe.segment .grid .column {
-padding-top: 5em;
-padding-bottom: 5em;
+.ui.compact.selection.dropdown {
+   min-width: 200px;
 }
 
-.footer.segment {
-padding: 1em 0em;
+.black-bg{
+  background-color: #000 !important;
 }
+.main-product-container{
+  margin-bottom: 50px;
+}
+ /* footer */
+.footer .header{
+  font-family: 'Lato';
+  color: #fff;
+  font-weight: 100;
+}
+
+ .footer a{
+  color: #fff;
+}
+
+.footer .sm-icon{
+  padding: .50em;
+}
+.footer .sm-icon:hover{
+  cursor: pointer;
+  color: rgb(110, 140, 70);
+}
+
+.footer{
+  padding-top: 2em !important;
+}
+
+::placeholder {
+  color: grey !important;
+  opacity: 1; /* Firefox */
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: grey !important;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: grey !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     
