--- a/adeluxuryeyewear/products/templates/products/base_layout.html
+++ b/adeluxuryeyewear/products/templates/products/base_layout.html
@@ -8,6 +8,8 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
         
+        <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Pacifico" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">   
         <link rel="stylesheet" href="{% static 'css/products_style.css' %}">
@@ -16,9 +18,9 @@
     <body>             
         <!-- Sidebar Menu -->
         <div class="ui vertical inverted sidebar menu">
-            <a class="item"> Home </a>
+            <a href="{% url 'index' %}" class="item"> Home </a>
             <div class="item">
-                <div class="header">Collections</div>
+                <a href="{% url 'products' %}"><div class="header">Collections</div></a>
                 <div class="menu">
                     <a class="item"> Kings Line </a>
                     <a class="item"> Queens Line </a>
@@ -41,6 +43,10 @@
         
         {% endblock %}
 
+        {% block footer %}
+
+        {% endblock %}
+
 
         
     
@@ -50,6 +56,8 @@
             $('#toggle').on('click', function(){
                 $('.ui.sidebar').sidebar('toggle');
             });
+
+            
 
         </script>
 
