--- a/adeluxuryeyewear/products/templates/products/products.html
+++ b/adeluxuryeyewear/products/templates/products/products.html
@@ -9,52 +9,157 @@
 <!-- Page Contents -->
 <div class="pusher">
 
-        <div class="ui inverted vertical masthead center aligned segment">
+    <div class="ui inverted vertical center aligned segment black-bg">
 
-                <div class="ui container">
-                  <div class="ui large secondary inverted menu">
-                    <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
-                   
-                  </div>
-                </div>
-            
-                <div class="ui text container">
-                  <h1 class="ui inverted header">
-                    Imagine-a-Company
-                  </h1>
-                </div>
-            
-              </div>
+        <div class="ui large secondary inverted menu">
+            <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
+            <img class="ui centered image logo-img" src="{% static 'img/ade_1.png' %}" style="width: 300px; height: 200px;">
+        </div>
+        
+    </div>
+
+
+    <div class="ui vertical center aligned basic segment">
+        Filter 
+        <select class="ui inline selection dropdown">
+            <option value="2">All</option>
+            <option value="1">Men</option>
+            <option value="0">Women</option>
+        </select>
+
+        Sort by  
+        <select class="ui inline selection compact dropdown">
+            <option value="2">Alphabetically, A-Z</option>
+            <option value="1">Price: lowest first</option>
+            <option value="0">Price: highest first</option>
+        </select>
+
+    </div>
+
+   
+   
  
-    
-    <div class="ui vertical stripe segment">
-        <div class="ui middle aligned stackable grid container">
+    <div class="ui container main-product-container">
+        <div class="ui middle aligned double stackable grid">
             <div class="row">
-                <div class="eight wide column">
-                    <h3 class="ui header">We Help Companies and Companions</h3>
-                    <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
+
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
+                </div>
+
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
+                </div>
+
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
+                </div>
+
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
+                </div>
     
-    <div class="ui inverted vertical footer segment">
-        <div class="ui container">
-            <div class="ui stackable inverted divided equal height stackable grid">
-                <div class="three wide column">
-                    <h4 class="ui inverted header">About</h4>
-                    <h4 class="ui inverted header">Contact</h4>
-                    <h4 class="ui inverted header">Terms & Conditions</h4>
-                    <h4 class="ui inverted header">Refund Policy</h4>
-                    <h4 class="ui inverted header">Privacy Statement</h4>
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
                 </div>
+
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
+                </div>
+        
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        FEATURED COLLECTION<br><br>
+                        $70.00
+                    </div>
+                </div>
+
+                
+
             </div>
         </div>
     </div>
 
+    <!-- FOOTER -->
+    <div class="ui inverted vertical footer segment black-bg footer-outter">
+        <div class="ui center aligned container">
+            <div class="ui stackable inverted grid center middle aligned">
+    
+                <div class="four wide column">
+                    <div class="ui large header">LET'S STAY CONNECTED</div>
+                    <div class="ui small header">Subscribe to our newsletter!</div>
+                </div>
+                
+
+                <div class="six wide column">
+                    <div class="ui form newsletter-form field" style="margin-top:2.5em">
+                        <input type="text" placeholder="Email address">
+                    </div>
+                </div>
+
+                <div class="two wide column">
+                    <button class="ui right labeled icon button" style="margin-top:2.5em">
+                        <i class="right chevron icon"></i>
+                        Subscribe
+                    </button>
+                </div>
+
+                <div class="four wide column">
+                    <div class="ui medium header">@adeluxury</div>
+                    <a href="http://www.instagram.com/adeluxuryeyewear"><span class="sm-icon"><i class="fab fa-instagram"></i></span></a>
+                    <span class="sm-icon"><i class="fab fa-facebook-f"></i></span>
+                    <span class="sm-icon"><i class="fab fa-twitter"></i></span>
+                </div>
+    
+            </div>
+            
+            <div class="ui inverted section divider"></div>
+                <div class="ui horizontal inverted small divided link list">
+                <a class="item" href="#">About</a>
+                <a class="item" href="#">Contact</a>
+                <a class="item" href="#">Terms & Conditions</a>
+                <a class="item" href="#">Refund Policy</a>
+                <a class="item" href="#">Privacy Statement</a>
+            </div>
+        </div>
+    </div>
 
 </div>
 {% endblock %}
+
+
 
 
 
