--- a/adeluxuryeyewear/backend_playground/templates/backend_playground/tmp.html
+++ b/adeluxuryeyewear/backend_playground/templates/backend_playground/tmp.html
@@ -1,51 +1,121 @@
+{% extends 'backend_playground/base_layout.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-</head>
+
 
 <!--
     TODO:   Make the sortby-price link have a dynamic parameter set to the page's eyewear line, i.e., Unisex.
             Right now, it is hardcoded to the King's Line with KL.
 -->
-<body>
-    <h1>Filter by</h1>
-    <a href="{% url 'collection-all' %}">All</a>
-    <a href="{% url 'collection-men' %}">Men</a>
-    <a href="{% url 'collection-women' %}">Women</a>
-    <a href="{% url 'collection-unisex' %}">Unisex</a>
-    <h3>More filtering</h3>
-    <a href="/bendplay/collection/{{ collection }}/priority__low-price">Price (lowest-highest)</a><br> <!-- Need to make dynamic parameter in URL -->
-    <a href="/bendplay/collection/{{ collection }}/priority__high-price">Price (highest-lowest)</a><br>
-    <a href="/bendplay/collection/{{ collection }}/priority__low-promo-price">Promo Price (lowest-highest)</a><br>
-    <a href="/bendplay/collection/{{ collection }}/priority__high-promo-price">Promo Price (highest-lowest)</a><br>    
-    <!--
-    <a href="{% url 'sortby_price-high' collection %}">Price (highest-lowest)</a><br>
-    <a href="{% url 'sortby_promoprice-low' collection %}">Promo Price (lowest-highest)</a><br>
-    <a href="{% url 'sortby_promoprice-high' collection %}">Promo Price (highest-lowest)</a>
-    -->
-    <div style="border-bottom: 5px solid darkblue"></div>
-    <div>
-        {% for item in ade_collection %}
-            <p>ID: {{item.eyewear_id}}</p>
-            <p>
-                <a href="{% url 'collection-detail' item.eyewear_id %}">{{ item.name }}</a>
-            </p>
-            <p>DESCRIPTION: {{ item.description }}</p>
-            <p>LINE: {{ item.line }}</p>
-            <div>
-                <img src="{% static "backend_playground/img/" %}{{ item.image }}" width=500 height=400>
-            </div>
-            <p>PRICE: {{ item.price }}</p>
-            <p>GENDER: {{ item.gender }}</p>
-            <p>PROMO PRICE: {{ item.promotional_price }}</p>
-            <p>{{ item.arm_length }}</p>
-            <p>{{ item.bridge_length }}</p>
-            <p>{{ item.lens_height }}</p>            
-            <p>{{ item.lens_width }}</p>
-            <div style="border-top: 5px solid green"></div>            
-        {% endfor %}
-    </div>
-</body>
 
-</html>
+{% block content %}
+
+<!-- Page Contents -->
+<div class="pusher">
+
+    <div class="ui inverted vertical center aligned segment black-bg">
+
+        <div class="ui large secondary inverted menu">
+            <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
+            <img class="ui centered image logo-img" src="{% static 'img/ade_1.png' %}" style="width: 300px; height: 200px;">
+        </div>
+        
+    </div>
+
+
+    <div class="ui vertical center aligned basic segment">
+        Filter 
+        <select class="ui inline selection dropdown" onchange="filterBy(this.value)">
+            <option disabled selected>select</option>
+            <option value="{% url 'collection-all' %}">All</option>
+            <option value="{% url 'collection-men' %}">Men</option>
+            <option value="{% url 'collection-women' %}">Women</option>
+            <option value="{% url 'collection-unisex' %}">Unisex</option>
+
+        </select>
+
+        Sort by  
+        <select class="ui inline selection compact dropdown" onchange="filterBy(this.value)">
+            <option disabled selected>Pick an option</option>
+            <option value="2">Alphabetically, A-Z</option>
+            <option value="/bendplay/collection/{{ collection }}/priority__low-price">Price: lowest first</option>
+            <option value="/bendplay/collection/{{ collection }}/priority__high-price">Price: highest first</option>
+        </select>
+
+
+        
+
+    </div>
+
+
+
+   
+   
+    <div class="ui container main-product-container filtered-items-container">
+        <div class="ui middle aligned double stackable grid">
+            <div class="row">
+            {% for item in ade_collection %}
+                <div class="four wide column">
+                    <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
+                    <div class="ui center aligned basic segment">
+                        <a href="{% url 'collection-detail' item.eyewear_id %}">{{ item.name }}</a>
+                        <p>$ {{ item.price }}</p>
+                    </div>
+                </div>
+
+            {% endfor %}
+
+               
+
+            </div>
+        </div>
+
+    </div>
+
+
+    <!-- FOOTER -->
+    <div class="ui inverted vertical footer segment black-bg footer-outter">
+        <div class="ui center aligned container">
+            <div class="ui stackable inverted grid center middle aligned">
+    
+                <div class="four wide column">
+                    <div class="ui large header">LET'S STAY CONNECTED</div>
+                    <div class="ui small header">Subscribe to our newsletter!</div>
+                </div>
+                
+
+                <div class="six wide column">
+                    <div class="ui form newsletter-form field" style="margin-top:2.5em">
+                        <input type="text" placeholder="Email address">
+                    </div>
+                </div>
+
+                <div class="two wide column">
+                    <button class="ui right labeled icon button" style="margin-top:2.5em">
+                        <i class="right chevron icon"></i>
+                        Subscribe
+                    </button>
+                </div>
+
+                <div class="four wide column">
+                    <div class="ui medium header">@adeluxury</div>
+                    <a href="http://www.instagram.com/adeluxuryeyewear"><span class="sm-icon"><i class="fab fa-instagram"></i></span></a>
+                    <span class="sm-icon"><i class="fab fa-facebook-f"></i></span>
+                    <span class="sm-icon"><i class="fab fa-twitter"></i></span>
+                </div>
+    
+            </div>
+            
+            <div class="ui inverted section divider"></div>
+                <div class="ui horizontal inverted small divided link list">
+                <a class="item" href="#">About</a>
+                <a class="item" href="#">Contact</a>
+                <a class="item" href="#">Terms & Conditions</a>
+                <a class="item" href="#">Refund Policy</a>
+                <a class="item" href="#">Privacy Statement</a>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+{% endblock %}
