--- a/adeluxuryeyewear/products/templates/products/base_layout.html
+++ b/adeluxuryeyewear/products/templates/products/base_layout.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>PLAYGROUND</title>
         <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">   
-        <link rel="stylesheet" href="{% static 'css/products_style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bendplay.css' %}">
     </head>
 
     <body>             
@@ -56,6 +56,14 @@
             $('#toggle').on('click', function(){
                 $('.ui.sidebar').sidebar('toggle');
             });
+
+            function filterBy(src){
+
+                window.location = src;
+            }
+            
+           
+            
 
             
 
