--- a/adeluxuryeyewear/products/templates/products/base_layout.html
+++ b/adeluxuryeyewear/products/templates/products/base_layout.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PLAYGROUND</title>
+        <title>Collections | ADE</title>
         <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
