--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -22,9 +22,9 @@
             <div class="item">
                 <a href="{% url 'products' %}"><div class="header">Collections</div></a>
                 <div class="menu">
-                    <a class="item"> Kings Line </a>
-                    <a class="item"> Queens Line </a>
-                    <a class="item"> Unisex Line </a>
+                    <a href="{% url 'collection__men' %}" class="item"> Kings Line </a>
+                    <a href="{% url 'collection__women' %}" class="item"> Queens Line </a>
+                    <a href="{% url 'collection__unisex' %}" class="item"> Unisex Line </a>
                 </div>
             </div>
             
