--- a/adeluxuryeyewear/ade/templates/ade/index.html
+++ b/adeluxuryeyewear/ade/templates/ade/index.html
@@ -12,7 +12,7 @@
 
         <div class="ui large secondary inverted menu">
             <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
-            <img class="ui centered image logo-img" src="{% static 'img/ade_1.png' %}" style="width: 300px; height: 200px;">
+            <a class="ui centered image logo-img" href="{% url 'index' %}"><img  src="{% static 'img/ade_1.png' %}" style="width: 300px; height: 200px;"></a>
         </div>
         
     </div>
