--- a/adeluxuryeyewear/products/static/css/products_style.css
+++ b/adeluxuryeyewear/products/static/css/products_style.css
@@ -7,6 +7,21 @@
   /*.pusher > .footer {
     flex: 1;
   }*/
+
+  body .pusher .full.height {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+  .logo-size{
+  width: 300px; 
+  height: 200px;
+  }
+
+  .breadcrumb a{
+    color: grey !important;
+  }
   .item-detail h1{
     font-family: 'Raleway';
     font-weight: 100;
@@ -30,8 +45,22 @@
       color: #000;
   }
 
+  .detail-product-container{
+    margin-top: 1.5em;
+  }
+
+  .uppercase {
+    text-transform: uppercase;
+  }
+
+  .thumbnail a :hover{
+    border: 1px solid #808e99;
+    
+  }
+
    /* footer */
-  .footer .header{
+  
+   .footer .header{
     font-family: 'Lato';
     color: #fff;
     font-weight: 100;
@@ -65,6 +94,14 @@
     color: grey !important;
   }
   
+/* MOBILE STYLES */
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .logo-size{
+      width: 200px; 
+      height: 150px;
+    }
+}
   
   
   
