--- a/adeluxuryeyewear/products/templates/products/collection_list.html
+++ b/adeluxuryeyewear/products/templates/products/collection_list.html
@@ -12,11 +12,15 @@
 <!-- Page Contents -->
 <div class="pusher">
 
+    <div class="full height">
+
+    
+
     <div class="ui inverted vertical center aligned segment black-bg">
 
         <div class="ui large secondary inverted menu">
             <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i> Menu</a>
-            <img class="ui centered image logo-img" src="{% static 'img/ade_1.png' %}" style="width: 300px; height: 200px;">
+            <a class="ui centered image logo-img" href="{% url 'index' %}"><img  class="logo-size" src="{% static 'img/ade_1.png' %}"></a>
         </div>
         
     </div>
@@ -66,6 +70,7 @@
     </div>
 
 
+
     <!-- FOOTER -->
     <div class="ui inverted vertical footer segment black-bg footer-outter">
         <div class="ui center aligned container">
@@ -73,10 +78,22 @@
     
                 <div class="four wide column">
                     <div class="ui large header">LET'S STAY CONNECTED</div>
-                    <div class="ui small header">Subscribe to our newsletter!</div>
+                    <!--<div class="ui small header">Subscribe to our newsletter!</div>-->
                 </div>
-                
+                <div class="ui form eight wide subscribe column">
 
+                    <div class="field">
+                    
+                        <p class="ui centered lead large">Subscribe to our newsletter!</p>
+                    <div class="ui fluid action input">
+                    <input placeholder="Email" type="text">
+                    <div class="ui button">Susbcribe</div>
+                    </div>
+                    </div>
+                    
+                    </div>
+                
+                <!--
                 <div class="six wide column">
                     <div class="ui form newsletter-form field" style="margin-top:2.5em">
                         <input type="text" placeholder="Email address">
@@ -88,7 +105,7 @@
                         <i class="right chevron icon"></i>
                         Subscribe
                     </button>
-                </div>
+                </div>-->
 
                 <div class="four wide column">
                     <div class="ui medium header">@adeluxury</div>
@@ -109,7 +126,8 @@
             </div>
         </div>
     </div>
-
+    
+</div>
 </div>
 
 {% endblock %}
